test/visibility/except/exceptWrongSymbol.good
exceptWrongSymbol.chpl:7: In module 'M2':
exceptWrongSymbol.chpl:8: error: cannot use 'except' clause with symbol 'q' as it is not defined in 'M1'
